--- a/css/sample.css
+++ b/css/sample.css
@@ -6,7 +6,7 @@ body{
     padding:0;
     text-align:center;
     font-size: 30px;
-    background-image: url(/img/pukemon_background.jpg);
+    background-image: url(../img/pukemon_background.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     font-family: ;
